--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <packaging>war</packaging>
 
 
+
     <dependencies>
         <dependency>
             <groupId>com.sun.faces</groupId>
@@ -23,6 +24,32 @@
             <artifactId>jsf-impl</artifactId>
             <version>2.2.10</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.projectlombok</groupId>-->
+            <!--<artifactId>lombok</artifactId>-->
+            <!--<version>1.18.4</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.50</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
